2004-04-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.cc (printf_value_cache::curr_value): Now NDArray.
	(printf_value_cache::double_value): Extract N-d array, not Matrix.

2004-04-21  John W. Eaton  <jwe@octave.org>

	* parse.y (function2): Pass id name to frob_function.  Delete id.
	(frob_function): Accept function name instead of identifier.
	Don't try to rename symbol table entry.  Lookup symbol record for
	function name here.  Insert name in symbol table if needed.
	Operate on symbol record instead of identifier.

2004-04-21  David Bateman  <dbateman@free.fr>

	* DLD_FUNCTIONS/fft.cc(do_fft): Correctly initialize the variable dim
	for scalar arguments.

	* DLD-FUNCTIONS/minmax.cc: Handle single vector arg correctly.

2004-04-20  John W. Eaton  <jwe@octave.org>

	* ls-mat-ascii.cc (read_mat_ascii_data): Prepend "X" to keywords.
	Only drop text after last "." in name.

	* lex.l (is_keyword): New function.
	(Fiskeyword): Use it.
	* lex.h: Provide decl.

	* lex.l (is_keyword_token): Rename from is_keyword.

2004-04-16  John W. Eaton  <jwe@octave.org>

	* file-io.cc (maybe_warn_interface_change): New function.
	(fopen_mode_to_ios_mode): Use it.

2004-04-16  Paul Kienzle  <pkienzle@users.sf.net>

	* file-io.cc (fopen_mode_to_ios_mode):  Default to binary mode.
	(Ffopen): Document 't' and 'b' mode flags.

2004-04-16  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DLD_XSRC): Add gcd.cc to the list.

2004-04-16  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/gcd.cc: New file.

2004-04-15  David Bateman  <dbateman@free.fr>

	* src/ov-ch-mat.h: convert_to_str_interal returns charNDArray.

2004-04-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_BUGS_STATEMENT): Bug list is now bug@octave.org.

2004-04-08  John W. Eaton  <jwe@octave.org>

	* ov-base-mat.cc (octave_base_matrix<MT>::do_index_op): Quit early
	if an error occurs when creating index vector object.

	* ov.cc (octave_value::numeric_assign): Always call maybe_mutate
	on return value.
